...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        alertPresenter = AlertPresenterImpl(viewController: self)
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        didUpdateProgressValue(0)
        presenter?.viewDidLoad()
        
        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
             options: [],
...
