...
                items.cellImage.image = image
            }
        }
        items.cellDateLabel.text = photos[indexPath.row].createdAt ?? ""
        let isLiked = photos[indexPath.row].isLiked
        let likeImage = isLiked ? UIImage(named: "LikeOn") : UIImage(named: "LikeOff")
        items.cellLikeButton.accessibilityIdentifier = "LikeButton"
        items.cellLikeButton.setImage(likeImage, for: .normal)
    }
    
    private func changeCellLike(for cell: ImagesListCell) {
        cellLikeAnimation(for: cell)
        guard let indexPath = tableView.indexPath(for: cell) else { return }
...
